# LumaDisk

./: CMakeLists.txt  README.md  resources.qrc
.github/workflows/: build-windows.yml
src/: AppTypes.h  MainWindow.cpp  MainWindow.h  OrganizerService.cpp  OrganizerService.h  ScanWorker.cpp  ScanWorker.h  main.cpp
styles/: luma_dark.qss
